chore: add mobile version of banner section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </header>
     <main>
         <section class="pb-lg-5 pb-3 position-relative">
-            <img src="images/banner-bg.png" alt="" class="img-fluid">
+            <img src="images/banner-bg.png" alt="" class="img-fluid bg-img object-fit-cover">
             <div class="position-absolute w-100 h-100 z-2 top-0 left-0 d-flex align-items-center">
                 <div class="container text-white">
                     <div class="row">
@@ -83,8 +83,8 @@
                                 <p class="fs-paragraph"> Мы гибко адаптируемся под задачи клиента, предлагая
                                     персональные решения для каждого.</p>
                                 <div class="mt-lg-5 mt-3 d-flex align-items-md-center flex-md-row flex-column">
-                                    <a href="#" class="btn btn-corp me-md-4">Подробнее</a>
-                                    <a href="#" class="btn btn-transparent me-md-4">Скачать презентацию</a>
+                                    <a href="#" class="btn btn-corp me-md-4 w-fit-content mb-md-0 mb-3">Подробнее</a>
+                                    <a href="#" class="btn btn-transparent me-md-4 w-fit-content">Скачать презентацию</a>
                                 </div>
                             </div>
                         </div>
