--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </header>
     <main>
-        <section class="pb-lg-5 pb-3 position-relative">
+        <section class="position-relative">
             <img src="images/banner-bg.png" alt="" class="img-fluid bg-img object-fit-cover">
             <div class="position-absolute w-100 h-100 z-2 top-0 left-0 d-flex align-items-center">
                 <div class="container text-white">
@@ -87,6 +87,38 @@
                                     <a href="#" class="btn btn-transparent me-md-4 w-fit-content">Скачать презентацию</a>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <h3 class="fw-semibold text-corp text-center fs-section-title">Наши партнеры</h3>
+                <p class="fw-semibold text-white text-center fs-paragraph mb-lg-5 mb-4">Work Link сотрудничает с надежными партнерами:</p>
+                <div class="row gy-lg-0 gy-5 pt-lg-5 pt-0 justify-content-center">
+                    <div class="col-xl-3 col-lg-6 col-8">
+                        <div class="w-100 my-xl-0 my-5 h-100 position-relative d-flex align-items-center text-center">
+                            <span class="position-absolute number">01</span>
+                            <p class="fw-extrabold fs-section-title text-corp lh-1 w-100">Крупные торговые сети</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-8">
+                        <div class="w-100 my-xl-0 my-5 h-100 position-relative d-flex align-items-center text-center">
+                            <span class="position-absolute number">02</span>
+                            <p class="fw-extrabold fs-section-title text-corp lh-1 w-100">Ведущие логистические компании</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-8">
+                        <div class="w-100 my-xl-0 my-5 h-100 position-relative d-flex align-items-center text-center">
+                            <span class="position-absolute number">03</span>
+                            <p class="fw-extrabold fs-section-title text-corp lh-1 w-100">Организации сферы обслуживания</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-8">
+                        <div class="w-100 my-xl-0 my-5 h-100 position-relative d-flex align-items-center text-center">
+                            <span class="position-absolute number">04</span>
+                            <p class="fw-extrabold fs-section-title text-corp lh-1 w-100">Известные промышленные предприятия</p>
                         </div>
                     </div>
                 </div>
