feat: add responsive sections

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
                                 <ul class="navbar-nav text-white gap-xxl-3 py-2 px-lg-4 ms-auto  align-items-lg-center h-100">
                                     <li class="nav-item">
                                         <a href="index.html" class="nav-link">
-                                            Главная
+                                            О компании
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="about.html" class="nav-link">О нас</a>
+                                        <a href="about.html" class="nav-link">Партнёры</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="news.html" class="nav-link">Новости</a>
+                                        <a href="news.html" class="nav-link">Преимущества</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="vacancy.html" class="nav-link">Вакансии</a>
+                                        <a href="vacancy.html" class="nav-link">Услуги</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="contacts.html" class="nav-link">Контакты</a>
@@ -92,7 +92,8 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="position-relative">
+            <img src="images/left-light.png" alt="" class="img-left position-absolute img-fluid">
             <div class="container">
                 <h3 class="fw-semibold text-corp text-center fs-section-title">Наши партнеры</h3>
                 <p class="fw-semibold text-white text-center fs-paragraph mb-lg-5 mb-4">Work Link сотрудничает с надежными партнерами:</p>
@@ -122,6 +123,142 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="py-lg-5 py-3 my-lg-5 my-3">
+            <div class="container py-lg-5">
+                <div class="row gx-0 flex-lg-row-reverse justify-content-between">
+                    <div class="col-xl-5">
+                        <div class="w-100 h-100 d-flex align-items-center justify-content-xl-end justify-content-center col-10">
+                            <h3 class="fw-bold fs-title text-corp mb-xl-0 mb-5 ">Наши услуги</h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-7">
+                        <div class="w-100 h-100">
+                            <div class="row gy-5 justify-content-center">
+                                <div class="col-lg-6 col-10">
+                                    <div class="w-100 h-100">
+                                        <div class="d-flex align-items-center">
+                                            <img src="icons/1.svg" alt="" class="img-fluid me-3 icon-height">
+                                            <p class="fw-semibold mb-0 fs-title-2 lh-1">Складские работники</p>
+                                        </div>
+                                        <p class="fs-span text-balance">
+                                            Обеспечивают точный учёт, порядок и бесперебойную работу склада.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-10">
+                                    <div class="w-100 h-100">
+                                        <div class="d-flex align-items-center">
+                                            <img src="icons/2.svg" alt="" class="img-fluid me-3 icon-height">
+                                            <p class="fw-semibold mb-0 fs-title-2 lh-1">Грузчики</p>
+                                        </div>
+                                        <p class="fs-span text-balance">
+                                            Обеспечивают быструю, аккуратную и безопасную погрузку и разгрузку товаров.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-10">
+                                    <div class="w-100 h-100">
+                                        <div class="d-flex align-items-center">
+                                            <img src="icons/3.svg" alt="" class="img-fluid me-3 icon-height">
+                                            <p class="fw-semibold mb-0 fs-title-2 lh-1">Уборщицы</p>
+                                        </div>
+                                        <p class="fs-span text-balance">
+                                            Обеспечивают чистоту, порядок и комфортную, безопасную рабочую среду.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-10">
+                                    <div class="w-100 h-100">
+                                        <div class="d-flex align-items-center">
+                                            <img src="icons/4.svg" alt="" class="img-fluid me-3 icon-height">
+                                            <p class="fw-semibold mb-0 fs-title-2 lh-1">Разнорабочие</p>
+                                        </div>
+                                        <p class="fs-span text-balance">
+                                            Выполняют широкий спектр задач для поддержки бесперебойной работы.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-lg-5 py-3 my-lg-5 my-3">
+            <div class="container">
+                <h3 class="fw-bold fs-title text-corp text-center mb-5 pb-lg-5">Ценности компании</h3>
+                <div class="row justify-content-center">
+                    <div class="col-lg-9">
+                        <div class="w-100 h-100 position-relative">
+                            <img src="images/center-light.png" alt="" class="center-light-img position-absolute w-100">
+                            <div class="row justify-content-lg-between justify-content-center gy-5">
+                                <div class="col-lg-5 col-9">
+                                    <div class="w-100 h-100 p-4 rounded-4 border-linear">
+                                        <p class="fs-title-2 fw-bold">
+                                            Ответственность
+                                        </p>
+                                        <p class="fs-paragraph">всегда соблюдаем обязательства</p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-5 col-9">
+                                    <div class="w-100 h-100 p-4 rounded-4 border-linear">
+                                        <p class="fs-title-2 fw-bold">
+                                            Качество
+                                        </p>
+                                        <p class="fs-paragraph">работаем с профессионалами высокого уровня.</p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-5 col-9">
+                                    <div class="w-100 h-100 p-4 rounded-4 border-linear">
+                                        <p class="fs-title-2 fw-bold">
+                                            Безопасность
+                                        </p>
+                                        <p class="fs-paragraph">соблюдаем все нормы и стандарты безопасности труда.</p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-5 col-9">
+                                    <div class="w-100 h-100 p-4 rounded-4 border-linear">
+                                        <p class="fs-title-2 fw-bold">
+                                            Оперативность
+                                        </p>
+                                        <p class="fs-paragraph">быстро решаем задачи клиентов.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-lg-5 py-3 my-lg-5 my-3">
+            <div class="container">
+                <h3 class="fw-bold fs-title text-corp text-center mb-5 pb-lg-5">Свяжитесь с нами</h3>
+                <form class="">
+                    <div class="row gx-lg-5 gx-0 gy-4 justify-content-center">
+                        <div class="col-lg-3 col-10">
+                            <div class="w-100 h-100 d-flex">
+                                <input type="text" class="form-control" placeholder="Введите имя*">
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-10">
+                            <div class="w-100 h-100 d-flex">
+                                <input type="tel" class="form-control" placeholder="Введите номер телефона*">
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-10">
+                            <div class="w-100 h-100 d-flex">
+                                <input type="mail" class="form-control" placeholder="Введите почту*">
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-10">
+                            <div class="w-100 h-100">
+                                <button class="btn btn-corp me-md-4 w-fit-content mb-md-0 mb-3">Отправить</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </section>
     </main>
