--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         </div>
                         <div class="col-lg-3 col-10">
                             <div class="w-100 h-100 d-flex">
-                                <input type="mail" class="form-control" placeholder="Введите почту*">
+                                <input type="email" class="form-control" placeholder="Введите почту*">
                             </div>
                         </div>
                         <div class="col-lg-3 col-10">
@@ -305,59 +305,81 @@
             <div class="container">
                 <h3 class="fw-bold fs-title text-corp text-center mb-5 pb-lg-5" data-aos="fade-right">Рабочий процесс</h3>
             </div>
-            <div class="slider-wrapper w-100 h-100">
+            <div class="slider-wrapper w-100 h-100 d-lg-block d-none">
                 <div class="splide image-slider splide-slider">
                     <div class="splide__track">
                         <ul class="splide__list">
                             <li class="splide__slide">
-                                <div class="row gx-2">
-                                    <div class="col-lg-4">
-                                        <div class="w-100 h-100">
-                                            <img src="images/slider/1.png" class="object-fit-cover w-100 mb-2" alt="">
-                                            <img src="images/slider/2.png" class="object-fit-cover w-100 " alt="">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-8">
-                                        <div class="w-100 h-100">
-                                            <img src="images/slider/3.png" class="object-fit-cover w-100 h-100" alt="">
-                                        </div>
-                                    </div>
-                                </div>
+                                <img src="images/slider/1.png" class="object-fit-cover w-100 h-100" alt="">
                             </li>
                             <li class="splide__slide">
-                                <div class="row gx-2">
-                                    <div class="col-lg-4">
-                                        <div class="w-100 h-100">
-                                            <img src="images/slider/4.png" class="object-fit-cover w-100 mb-2" alt="">
-                                            <img src="images/slider/5.png" class="object-fit-cover w-100 " alt="">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-8">
-                                        <div class="w-100 h-100">
-                                            <img src="images/slider/6.png" class="object-fit-cover w-100 h-100" alt="">
-                                        </div>
-                                    </div>
-                                </div>
+                                <img src="images/slider/2.png" class="object-fit-cover w-100 h-100" alt="">
                             </li>
                             <li class="splide__slide">
-                                <div class="row gx-2">
-                                    <div class="col-lg-4">
-                                        <div class="w-100 h-100">
-                                            <img src="images/slider/7.png" class="object-fit-cover w-100 mb-2" alt="">
-                                            <img src="images/slider/8.png" class="object-fit-cover w-100 " alt="">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-8">
-                                        <div class="w-100 h-100">
-                                            <img src="images/slider/9.png" class="object-fit-cover w-100 h-100" alt="">
-                                        </div>
-                                    </div>
-                                </div>
+                                <img src="images/slider/3.png" class="object-fit-cover w-100 h-100" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <img src="images/slider/4.png" class="object-fit-cover w-100 h-100" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <img src="images/slider/5.png" class="object-fit-cover w-100 h-100" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <img src="images/slider/6.png" class="object-fit-cover w-100 h-100" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <img src="images/slider/7.png" class="object-fit-cover w-100 h-100" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <img src="images/slider/8.png" class="object-fit-cover w-100 h-100" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <img src="images/slider/9.png" class="object-fit-cover w-100 h-100" alt="">
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="custom-progress mx-auto"></div>
+            </div>
+            <div class="container">
+                <div class="slider-wrapper w-100 h-100 d-lg-none d-block">
+                    <div class="splide image-slider-mobile splide-slider">
+                        <div class="splide__track">
+                            <ul class="splide__list">
+                                <li class="splide__slide">
+                                    <img src="images/slider/1.png" class="object-fit-cover w-100 h-100 img-fluid" alt="">
+                                </li>
+                                <li class="splide__slide">
+                                    <img src="images/slider/2.png" class="object-fit-coverw-100 h-100 img-fluid" alt="">
+                                </li>
+                                <li class="splide__slide">
+                                    <img src="images/slider/3.png" class="object-fit-cover w-100 h-100 img-fluid" alt="">
+                                </li>
+                                <li class="splide__slide">
+                                    <img src="images/slider/4.png" class="object-fit-cover w-100 h-100 img-fluid" alt="">
+                                </li>
+                                <li class="splide__slide">
+                                    <img src="images/slider/5.png" class="object-fit-cover w-100 h-100 img-fluid" alt="">
+                                </li>
+                                <li class="splide__slide">
+                                    <img src="images/slider/6.png" class="object-fit-coverw-100 h-100 img-fluid" alt="">
+                                </li>
+                                <li class="splide__slide">
+                                    <img src="images/slider/7.png" class="object-fit-cover w-100 h-100 img-fluid" alt="">
+                                </li>
+                                <li class="splide__slide">
+                                    <img src="images/slider/8.png" class="object-fit-cover w-100 h-100 img-fluid" alt="">
+                                </li>
+                                <li class="splide__slide">
+                                    <img src="images/slider/9.png" class="object-fit-cover w-100 h-100 img-fluid" alt="">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <button class="border-0 bg-transparent fs-1 cursor-pointer slider-prev"><i class="bi bi-arrow-left text-corp fs-1"></i></button>
+                        <button class="border-0 bg-transparent fs-1 cursor-pointer slider-next"><i class="bi bi-arrow-right text-corp fs-1"></i></button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
