feat: add counter trigger

--- a/index.html
+++ b/index.html
@@ -137,26 +137,26 @@
                     </div>
                     <div class="col-lg-8">
                         <div class="row gy-5 justify-content-lg-start justify-content-center">
-                            <div class="col-lg-4 col-10" data-aos="fade-up" data-aos-duration="400">
+                            <div class="col-lg-4 col-10" >
                                 <div class="w-100 h-100">
-                                    <span class="number number-custom-transparent">01</span>
+                                    <span class="number number-custom-transparent">0<span class="counter">1</span></span>
                                     <p class="fw-bold fs-title-2 text-balance lh-1">Быстрое и надежное решение кадровых вопросов.</p>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-10"  data-aos="fade-up" data-aos-duration="600">
+                            <div class="col-lg-4 col-10"  >
                                 <div class="w-100 h-100">
-                                    <span class="number number-solid">02</span>
+                                    <span class="number number-solid">0<span class="counter">2</span></span>
                                     <p class="fw-bold fs-title-2 text-balance lh-1">Гибкие и выгодные условия сотрудничества.</p>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-10" data-aos="fade-up" data-aos-duration="800">
+                            <div class="col-lg-4 col-10" >
                                 <div class="w-100 h-100">
-                                    <span class="number number-custom-transparent">03</span>
+                                    <span class="number number-custom-transparent">0<span class="counter">3</span></span>
                                     <p class="fw-bold fs-title-2 text-balance lh-1">Экономическая эффективность и снижение затрат.</p>
                                 </div>
-                            </div><div class="col-lg-4 col-10" data-aos="fade-up" data-aos-duration="1000">
+                            </div><div class="col-lg-4 col-10" >
                                 <div class="w-100 h-100">
-                                    <span class="number number-solid">04</span>
+                                    <span class="number number-solid">0<span class="counter">4</span></span>
                                     <p class="fw-bold fs-title-2 text-balance lh-1">Полный пакет документации и прозрачность.</p>
                                 </div>
                             </div>
@@ -487,6 +487,8 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
 	<script src=" https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-grid@0.4.1/dist/js/splide-extension-grid.min.js "></script>
     <script src="main.js"></script>
 </body>
