--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav text-white gap-xxl-3 py-2 px-lg-4 ms-auto  align-items-lg-center h-100">
                                     <li class="nav-item">
-                                        <a href="index.html" class="nav-link">
+                                        <a href="#about" class="nav-link">
                                             О компании
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="about.html" class="nav-link">Партнёры</a>
+                                        <a href="#partners" class="nav-link">Партнёры</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="news.html" class="nav-link">Преимущества</a>
+                                        <a href="#advantages" class="nav-link">Преимущества</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="vacancy.html" class="nav-link">Услуги</a>
+                                        <a href="#servises" class="nav-link">Услуги</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="contacts.html" class="nav-link">Контакты</a>
+                                        <a href="#contacts" class="nav-link">Контакты</a>
                                     </li>
                                 </ul>
                                 <div class="dropdown w-fit-content border-0 rounded-2 bg-corp">
@@ -70,7 +70,7 @@
         </div>
     </header>
     <main>
-        <section class="position-relative">
+        <section id="about" class="position-relative">
             <img src="images/banner-bg.png" alt="" class="img-fluid bg-img object-fit-cover">
             <div class="position-absolute w-100 h-100 z-2 top-0 left-0 d-flex align-items-center">
                 <div class="container text-white">
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </section>
-        <section class="position-relative">
+        <section id="partners" class="position-relative">
             <img src="images/left-light.png" alt="" class="img-left position-absolute img-fluid">
             <img src="images/right-light.png" alt="" class="img-right position-absolute img-fluid">
             <div class="container">
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-3 my-5">
+        <section id="advantages" class="py-lg-5 py-3 my-5">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-10">
@@ -165,7 +165,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-3 my-lg-5 my-3">
+        <section id="servises" class="py-lg-5 py-3 my-lg-5 my-3">
             <div class="container py-lg-5">
                 <div class="row gx-0 flex-lg-row-reverse justify-content-between">
                     <div class="col-xl-5">
@@ -272,7 +272,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-3 my-lg-5 my-3">
+        <section id="contacts" class="py-lg-5 py-3 my-lg-5 my-3">
             <div class="container">
                 <h3 class="fw-bold fs-title text-corp text-center mb-5 pb-lg-5" data-aos="fade-right">Свяжитесь с нами</h3>
                 <form class="">
